--- a/project-8/project-8/Views/AllowEnrollment/Index.cshtml
+++ b/project-8/project-8/Views/AllowEnrollment/Index.cshtml
@@ -1,9 +1,11 @@
 ﻿
 @{
+    Layout = "~/Views/Shared/_Layout1.cshtml";
+
     ViewBag.Title = "Index";
 }
 
-<h2>Index</h2>
+<h2>Semester Joining Fees</h2>
 
 
 <table class="table">
