--- a/project-8/project-8/Views/Student_Class/Error.cshtml
+++ b/project-8/project-8/Views/Student_Class/Error.cshtml
@@ -3,5 +3,5 @@
     ViewBag.Title = "Error";
 }
 
-<h2 style="text-align:center">Please check out with Malleah</h2>
+<h2 style="text-align:center">Please check out with Accountant</h2>
 
