--- a/project-8/project-8/Views/tableAprove/Index.cshtml
+++ b/project-8/project-8/Views/tableAprove/Index.cshtml
@@ -1,10 +1,11 @@
 ﻿@model List<project_8.Models.class_Accepted>
 
 @{
+    Layout = "~/Views/Shared/_Layout1.cshtml";
     ViewBag.Title = "Index";
 }
 
-<h2>Index</h2>
+<h2>Semester Hours Fees</h2>
 
 <table class="table">
     <tr>
@@ -33,7 +34,7 @@
                 @*@Html.LabelFor(m => m.charge)*@
             </td>
             <td>
-                @Html.ActionLink("Paid", "Paid", new { id = item.User_id, payment = item.charge, userName = item.User_name }, null) 
+                @Html.ActionLink("Paid", "Paid", new { id = item.User_id, payment = item.charge, userName = item.User_name }, new { @class = "btn btn-success" }) 
               
             </td>
         </tr>
