--- a/project-8/project-8/Views/Classes/Create.cshtml
+++ b/project-8/project-8/Views/Classes/Create.cshtml
@@ -1,7 +1,7 @@
 ﻿@model project_8.Models.Class
 
 @{
-    Layout = null;
+    Layout = "~/Views/Shared/_Layout1.cshtml";
 }
 
 <!DOCTYPE html>
@@ -14,32 +14,41 @@
 <body>
     @Scripts.Render("~/bundles/jquery")
     @Scripts.Render("~/bundles/jqueryval")
-    
-    
-    @using (Html.BeginForm()) 
+
+
+    @using (Html.BeginForm())
     {
         @Html.AntiForgeryToken()
-        
+
         <div class="form-horizontal">
-            <h4>Class</h4>
+            <h4>Classes</h4>
             <hr />
             @Html.ValidationSummary(true, "", new { @class = "text-danger" })
             <div class="form-group">
-                @Html.LabelFor(model => model.Courses_id, "Courses_id", htmlAttributes: new { @class = "control-label col-md-2" })
+                @Html.LabelFor(model => model.Courses_id, "Courses_id", htmlAttributes: new { @class = "control-label col-md-2", style = "text-align: left;width: 150px;" })
                 <div class="col-md-10">
                     @Html.DropDownList("Courses_id", null, htmlAttributes: new { @class = "form-control" })
                     @Html.ValidationMessageFor(model => model.Courses_id, "", new { @class = "text-danger" })
                 </div>
             </div>
-    
+
             <div class="form-group">
-                @Html.LabelFor(model => model.Time, htmlAttributes: new { @class = "control-label col-md-2" })
+                @Html.LabelFor(model => model.Time, htmlAttributes: new { @class = "control-label col-md-2", style = "text-align: left;width: 150px;" })
                 <div class="col-md-10">
-                    @Html.EditorFor(model => model.Time, new { htmlAttributes = new { @class = "form-control" } })
+                    @*@Html.EditorFor(model => model.Time, new { htmlAttributes = new { @class = "form-control" } })*@
+                    @Html.DropDownListFor(m => m.Time, new List<SelectListItem>
+               {
+                   new SelectListItem{Text = "08:00", Value="08:00:00"},
+                   new SelectListItem{Text = "09:30", Value="09:30:00"},
+                   new SelectListItem{Text = "11:00", Value="11:00:00"},
+                   new SelectListItem{Text = "12:30", Value="12:30:00"},
+                   new SelectListItem{Text = "02:00", Value="02:00:00"}
+               }, "Select Time", new { @class = "form-control" })
+
                     @Html.ValidationMessageFor(model => model.Time, "", new { @class = "text-danger" })
                 </div>
             </div>
-    
+
             <div class="form-group">
                 <div class="col-md-offset-2 col-md-10">
                     <input type="submit" value="Create" class="btn btn-default" />
@@ -47,9 +56,49 @@
             </div>
         </div>
     }
-    
-    <div>
-        @Html.ActionLink("Back to List", "Index")
-    </div>
+
+
+    <div class="ser" style="width:100%;overflow:auto">
+        @using (Html.BeginForm("Create", "Classes", FormMethod.Get))
+
+        {
+            @Html.TextBox("search")
+            <input type="Submit" value="search" class="btn btn-light" />
+        }
+    </div><br />
+
+
+
+    <table class="table">
+        <tr>
+            <th>
+                <span>Time</span>
+            </th>
+            <th>
+                <span>Course Name</span>
+            </th>
+            <th></th>
+        </tr>
+
+        @foreach (var item in ViewBag.classe)
+        {
+            <tr>
+                <td>
+                    <span>@item.Time</span>
+
+                </td>
+                <td>
+                    <span>@item.Cours.Name</span>
+                </td>
+                <td>
+
+                    @Html.ActionLink("Edit", "Edit", new { id = item.Id }, new { @class = "btn btn-success" }) |
+                    @*@Html.ActionLink("Details", "Details", new { id = item.Id }) |*@
+                    @Html.ActionLink("Delete", "Delete", new { id = item.Id }, new { @class = "btn btn-danger" })
+                </td>
+            </tr>
+        }
+
+    </table>
 </body>
 </html>
