--- a/project-8/project-8/Views/Classes/Details.cshtml
+++ b/project-8/project-8/Views/Classes/Details.cshtml
@@ -1,7 +1,7 @@
 ﻿@model project_8.Models.Class
 
 @{
-    Layout = null;
+    Layout = "~/Views/Shared/_Layout1.cshtml";
 }
 
 <!DOCTYPE html>
@@ -19,19 +19,19 @@
             <dt>
                 @Html.DisplayNameFor(model => model.Time)
             </dt>
-    
+
             <dd>
                 @Html.DisplayFor(model => model.Time)
             </dd>
-    
+
             <dt>
                 @Html.DisplayNameFor(model => model.Cours.Name)
             </dt>
-    
+
             <dd>
                 @Html.DisplayFor(model => model.Cours.Name)
             </dd>
-    
+
         </dl>
     </div>
     <p>
