--- a/project-8/project-8/Views/Faculities/Create.cshtml
+++ b/project-8/project-8/Views/Faculities/Create.cshtml
@@ -26,7 +26,7 @@
             <hr />
             @Html.ValidationSummary(true, "", new { @class = "text-danger" })
             <div class="form-group">
-                @Html.LabelFor(model => model.Name, htmlAttributes: new { @class = "control-label col-md-2" })
+                @Html.LabelFor(model => model.Name, htmlAttributes: new { @class = "control-label col-md-2", style = "text-align: left;width: 110px;" })
                 <div class="col-md-10">
                     @Html.EditorFor(model => model.Name, new { htmlAttributes = new { @class = "form-control" } })
                     @Html.ValidationMessageFor(model => model.Name, "", new { @class = "text-danger" })
@@ -34,7 +34,7 @@
             </div>
 
             <div class="form-group">
-                @Html.LabelFor(model => model.description, htmlAttributes: new { @class = "control-label col-md-2" })
+                @Html.LabelFor(model => model.description, htmlAttributes: new { @class = "control-label col-md-2", style = "text-align: left;width: 110px;" })
                 <div class="col-md-10">
                     @Html.EditorFor(model => model.description, new { htmlAttributes = new { @class = "form-control" } })
                     @Html.ValidationMessageFor(model => model.description, "", new { @class = "text-danger" })
@@ -42,7 +42,7 @@
             </div>
 
             <div class="form-group">
-                <label class="control-label col-md-2" for="img">img</label>
+                <label class="control-label col-md-2" style="text-align: left;width: 110px;" for="img">img</label>
                 <div class="col-md-10">
                     <input class=" text-box single-line" id="img" name="img" type="file" value="">
                     <span class="field-validation-valid text-danger" data-valmsg-for="img" data-valmsg-replace="true"></span>
@@ -57,6 +57,17 @@
         </div>
     }
 
+    <br />
+    <br />
+
+    <div class="ser" style="width:100%;overflow:auto">
+        @using (Html.BeginForm("Create", "Faculities", FormMethod.Get))
+
+        { 
+            @Html.TextBox("search")
+            <input type="Submit" value="search" class="btn btn-light" />
+        }
+    </div><br />
 
 
     <table class="table table-striped">
@@ -89,7 +100,7 @@
                 <td>
                     @Html.ActionLink("Edit", "Edit", new { id = item.Id }, new { @class = "btn btn-success" }) |
                     @Html.ActionLink("Details", "Details", new { id = item.Id }, new { @class = "btn btn-info" }) |
-                    @Html.ActionLink("Delete", "Delete", new { id = item.Id })
+                    @Html.ActionLink("Delete", "Delete", new { id = item.Id }, new { @class = "btn btn-danger" })
                 </td>
             </tr>
         }
@@ -98,7 +109,7 @@
 
 
 
-        @*<div>
+    @*<div>
             @Html.ActionLink("Back to List", "Index")
         </div>*@
 </body>
