--- a/project-8/project-8/Views/Home/Contact.cshtml
+++ b/project-8/project-8/Views/Home/Contact.cshtml
@@ -1,6 +1,10 @@
 ﻿@{
     ViewBag.Title = "Contact";
 }
+
+
+
+
 <div class="hero-wrap hero-wrap-2" style="background-image: url('/images/bg_2.jpg'); background-attachment:fixed;">
     <div class="overlay"></div>
     <div class="container">
@@ -27,41 +31,44 @@
                 <p><span>Phone:</span> <a href="tel://1234567920">+ 1235 2355 98</a></p>
             </div>
             <div class="col-md-3">
-                <p><span>Email:</span> <a href="mailto:info@yoursite.com">info@yoursite.com</a></p>
+                <p><span>Email:</span> <a href="ayahizzat@hotmail.com"> ayahizzat@hotmail.com</a></p>
             </div>
             <div class="col-md-3">
                 <p><span>Website</span> <a href="#">yoursite.com</a></p>
             </div>
         </div>
+
         <div class="row block-9">
             <div class="col-md-6 pr-md-5">
                 <h4 class="mb-4">Do you have any questions?</h4>
-                <form action="#">
+                <form method="post" action="@Url.Action("SendEmail", "Home")">
                     <div class="form-group">
-                        <input type="text" class="form-control" placeholder="Your Name">
+                        <input type="text" class="form-control" name="Name" placeholder="Your Name">
                     </div>
                     <div class="form-group">
-                        <input type="text" class="form-control" placeholder="Your Email">
+                        <input type="text" class="form-control" name="Email" placeholder="Your Email">
                     </div>
                     <div class="form-group">
-                        <input type="text" class="form-control" placeholder="Subject">
+                        <input type="text" class="form-control" name="Subject" placeholder="Subject">
                     </div>
                     <div class="form-group">
-                        <textarea name="" id="" cols="30" rows="7" class="form-control" placeholder="Message"></textarea>
+                        <textarea name="Message" id="" cols="30" rows="7" class="form-control" placeholder="Message"></textarea>
                     </div>
                     <div class="form-group">
+        
                         <input type="submit" value="Send Message" class="btn btn-primary py-3 px-5">
                     </div>
                 </form>
-
             </div>
 
             <div class="col-md-6" id="map"></div>
         </div>
+
+
     </div>
 </section>
 
-<section class="ftco-section-parallax">
+@*<section class="ftco-section-parallax">
     <div class="parallax-img d-flex align-items-center">
         <div class="container">
             <div class="row d-flex justify-content-center">
@@ -82,4 +89,4 @@
             </div>
         </div>
     </div>
-</section>
+</section>*@
