--- a/project-8/project-8/Views/Home/Courses.cshtml
+++ b/project-8/project-8/Views/Home/Courses.cshtml
@@ -29,7 +29,7 @@
                     </div>
                 </div>
             </div>
-            @*<div class="col-md-4 d-flex ftco-animate">
+            <div class="col-md-4 d-flex ftco-animate">
                 <div class="course align-self-stretch">
                     <a href="#" class="img" style="background-image: url(/images/course-2.jpg)"></a>
                     <div class="text p-4">
@@ -83,9 +83,9 @@
                         <p><a href="#" class="btn btn-primary">Enroll now!</a></p>
                     </div>
                 </div>
-            </div>*@
+            </div>
         </div>
-        @*<div class="row mt-5">
+        <div class="row mt-5">
             <div class="col text-center">
                 <div class="block-27">
                     <ul>
@@ -99,11 +99,11 @@
                     </ul>
                 </div>
             </div>
-        </div>*@
+        </div>
     </div>
 </section>
 
-@*<section class="ftco-section-parallax">
+<section class="ftco-section-parallax">
     <div class="parallax-img d-flex align-items-center">
         <div class="container">
             <div class="row d-flex justify-content-center">
@@ -124,4 +124,4 @@
             </div>
         </div>
     </div>
-</section>*@
+</section>
