--- a/project-8/project-8/Views/Shared/_Layout.cshtml
+++ b/project-8/project-8/Views/Shared/_Layout.cshtml
@@ -62,7 +62,7 @@
                 <ul class="navbar-nav ml-auto">
                     <li class="nav-item"><a href="/Home/Index" class="nav-link">Home</a></li>
                     <li class="nav-item"><a href="/Home/About" class="nav-link">About</a></li>
-                    <li class="nav-item"><a href="#Faculty" class="nav-link">Faculty</a></li>
+                    @*<li class="nav-item"><a href="#Faculty" class="nav-link">Faculty</a></li>*@
                     <li class="nav-item"><a href="/Majors/AllMajors" class="nav-link">Majors</a></li>
                     <li class="nav-item"><a href="/Account/Login" class="nav-link">Registration System</a></li>
 
