--- a/project-8/project-8/Views/Shared/_Layout1.cshtml
+++ b/project-8/project-8/Views/Shared/_Layout1.cshtml
@@ -22,33 +22,65 @@
                 </div>
             </div>
             <ul class="sidebar-list">
+                @if (Context.User.IsInRole("Admin"))
+                {
+                    <li class="sidebar-list-item ">
+                        @Html.ActionLink("Faculities", "Create", "Faculities")
+                        <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-shopping-bag"><path d="M6 2L3 6v14a2 2 0 0 0 2 2h14a2 2 0 0 0 2-2V6l-3-4z" /><line x1="3" y1="6" x2="21" y2="6" /><path d="M16 10a4 4 0 0 1-8 0" /></svg>
+
+
+                    </li>
+
+                    <li class="sidebar-list-item">
+                        @Html.ActionLink("Majors", "Create", "Majors")
+                        <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-home"><path d="M3 9l9-7 9 7v11a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2z" /><polyline points="9 22 9 12 15 12 15 22" /></svg>
+
+                    </li>
+                }
+                @if (Context.User.IsInRole("Ameed_IT") || Context.User.IsInRole("Ameed_Engineering") || Context.User.IsInRole("Ameed_Business") || Context.User.IsInRole("Admin"))
+                {
+
+                    <li class="sidebar-list-item">
+                        @Html.ActionLink("Courses", "Create", "Cours")
+
+                        <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-pie-chart"><path d="M21.21 15.89A10 10 0 1 1 8 2.83" /><path d="M22 12A10 10 0 0 0 12 2v10z" /></svg>
+
+                    </li>
+                    <li class="sidebar-list-item">
+                        @Html.ActionLink("Classes", "Create", "Classes")
+
+                        <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-pie-chart"><path d="M21.21 15.89A10 10 0 1 1 8 2.83" /><path d="M22 12A10 10 0 0 0 12 2v10z" /></svg>
+
+                    </li>
+                }
+
+                @if (Context.User.IsInRole("Acceptance"))
+                {
+
+                    <li class="sidebar-list-item">
+                        @Html.ActionLink("Enrollment Forms", "Index", "AllowStudent")
+
+                        <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-pie-chart"><path d="M21.21 15.89A10 10 0 1 1 8 2.83" /><path d="M22 12A10 10 0 0 0 12 2v10z" /></svg>
+
+                    </li>
+                }
+
+                @if (Context.User.IsInRole("Accountant"))
+                 {
+
                 <li class="sidebar-list-item">
-                    @Html.ActionLink("Majors", "Index", "Majors")
-                    <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-home"><path d="M3 9l9-7 9 7v11a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2z" /><polyline points="9 22 9 12 15 12 15 22" /></svg>
-
-                </li>
-                <li class="sidebar-list-item ">
-                    @Html.ActionLink("Faculities", "Index", "Faculities")
-                    <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-shopping-bag"><path d="M6 2L3 6v14a2 2 0 0 0 2 2h14a2 2 0 0 0 2-2V6l-3-4z" /><line x1="3" y1="6" x2="21" y2="6" /><path d="M16 10a4 4 0 0 1-8 0" /></svg>
-
-
-                </li>
-                <li class="sidebar-list-item">
-                    @Html.ActionLink("Courses", "Index", "Cours")
+                    @Html.ActionLink("Semester Joining Fees", "Index", "AllowEnrollment")
 
                     <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-pie-chart"><path d="M21.21 15.89A10 10 0 1 1 8 2.83" /><path d="M22 12A10 10 0 0 0 12 2v10z" /></svg>
 
                 </li>
-                <li class="sidebar-list-item" onclick="acceptclick()">
-                    @Html.ActionLink("Accepted student", "Index", "AspNetUsers")
-                    <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-inbox"><polyline points="22 12 16 12 14 15 10 15 8 12 2 12" /><path d="M5.45 5.11L2 12v6a2 2 0 0 0 2 2h16a2 2 0 0 0 2-2v-6l-3.45-6.89A2 2 0 0 0 16.76 4H7.24a2 2 0 0 0-1.79 1.11z" /></svg>
+                <li class="sidebar-list-item">
+                    @Html.ActionLink("Semester Hours Fees", "Index", "tableAprove")
+
+                    <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-pie-chart"><path d="M21.21 15.89A10 10 0 1 1 8 2.83" /><path d="M22 12A10 10 0 0 0 12 2v10z" /></svg>
 
                 </li>
-                <li class="sidebar-list-item" onclick="requestclick()">
-                    @Html.ActionLink("Student Request", "Index", "AspNetUsers1")
-                    <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-bell"><path d="M18 8A6 6 0 0 0 6 8c0 7-3 9-3 9h18s-3-2-3-9" /><path d="M13.73 21a2 2 0 0 1-3.46 0" /></svg>
-
-                </li>
+                   }
             </ul>
 
         </div>
