--- a/project-8/project-8/Views/Student_Class/Create.cshtml
+++ b/project-8/project-8/Views/Student_Class/Create.cshtml
@@ -27,7 +27,7 @@
                 @Html.AntiForgeryToken()
 
                 <div class="form-horizontal">
-                  
+
                     @Html.ValidationSummary(true, "", new { @class = "text-danger" })
                     <div class="form-group">
 
@@ -55,7 +55,7 @@
                                     @Html.ValidationMessageFor(model => model.Class_id, "", new { @class = "text-danger" })
                                 </div>
                             </div>
-                            <div class="col-md-6">
+                            @*<div class="col-md-6">
 
                                 <div class="form-group">
                                     <label class="control-label col-md-2">Student</label>
@@ -63,7 +63,7 @@
                                     @Html.ValidationMessageFor(model => model.User_id, "", new { @class = "text-danger" })
                                 </div>
 
-                            </div>
+                            </div>*@
                         </div>
 
                         <div class="form-group">
@@ -96,8 +96,8 @@
                                     <label>@item.Time</label>
                                 </td>
                                 <td>
-                                    @Html.ActionLink("Edit", "Edit", new { id = item.Id }) |
-                                    @Html.ActionLink("Details", "Details", new { id = item.Id }) |
+                                    @*@Html.ActionLink("Edit", "Edit", new { id = item.Id }) |
+                                    @Html.ActionLink("Details", "Details", new { id = item.Id }) |*@
                                     @Html.ActionLink("Delete", "Delete", new { id = item.Id })
                                 </td>
                             </tr>
@@ -112,9 +112,11 @@
                 </div>
             }
 
-            <div>
-                @Html.ActionLink("Confirm", "Confirm", new { @class = "btn btn-default" })
-            </div>
+        <div>
+            @*@Html.ActionLink("Confirm The Schedule", "Confirm")*@
+            @Html.ActionLink("Confirm The Schedule", "Confirm", null, new { style= "background-color:buttonface;color:black; padding:15px;border-radius: 30px;" })
+
+        </div>
 
         </div>
         <br />
