--- a/project-8/project-8/Views/Student_Class/CreateAddAndDrop.cshtml
+++ b/project-8/project-8/Views/Student_Class/CreateAddAndDrop.cshtml
@@ -95,8 +95,8 @@
                                     <label>@item.Time</label>
                                 </td>
                                 <td>
-                                    @Html.ActionLink("Edit", "Edit", new { id = item.Id }) |
-                                    @Html.ActionLink("Details", "Details", new { id = item.Id }) |
+                                    @*@Html.ActionLink("Edit", "Edit", new { id = item.Id }) |
+                                    @Html.ActionLink("Details", "Details", new { id = item.Id }) |*@
                                     @Html.ActionLink("Delete", "Delete", new { id = item.Id })
                                 </td>
                             </tr>
@@ -113,13 +113,13 @@
 
             <div class="form-group">
                 <div class="col-md-offset-2 col-md-10">
-                    @Html.ActionLink("Confirm", "Confirm", new {@class="btn btn-default"})
+                    @Html.ActionLink("Confirm The Schedule", "Confirm", null, new { style = "background-color:buttonface;color:black; padding:15px;border-radius: 30px;" })
                 </div>
             </div>
 
 
         </div>
-    
+
         <br />
     </div>
 </body>
