--- a/project-8/project-8/Views/Student_Class/Delete.cshtml
+++ b/project-8/project-8/Views/Student_Class/Delete.cshtml
@@ -1,7 +1,7 @@
 ﻿@model project_8.Models.Student_Class
 
 @{
-    Layout = "~/Views/Shared/_LayoutStudent.cshtml";
+    Layout = null;
 }
 
 <!DOCTYPE html>
@@ -12,43 +12,37 @@
     <title>Delete</title>
 </head>
 <body>
-
-    <div class="container">
-
-        <h3>Are you sure you want to delete this?</h3>
-        <div>
-            <h4>Student_Class</h4>
-            <hr />
-            <dl class="dl-horizontal">
-                <dt>
-                    @Html.DisplayNameFor(model => model.AspNetUser.Email)
-                </dt>
-
-                <dd>
-                    @Html.DisplayFor(model => model.AspNetUser.Email)
-                </dd>
-
-                <dt>
-                    @Html.DisplayNameFor(model => model.Class.Id)
-                </dt>
-
-                <dd>
-                    @Html.DisplayFor(model => model.Class.Id)
-                </dd>
-
-            </dl>
-
-            @using (Html.BeginForm())
-            {
-                @Html.AntiForgeryToken()
-
-                <div class="form-actions no-color">
-                    <input type="submit" value="Delete" class="btn btn-default" /> |
-                    @Html.ActionLink("Back to List", "Index")
-                </div>
-            }
-        </div>
+    <h3>Are you sure you want to delete this?</h3>
+    <div>
+        <h4>Student_Class</h4>
+        <hr />
+        <dl class="dl-horizontal">
+            <dt>
+                @Html.DisplayNameFor(model => model.AspNetUser.Email)
+            </dt>
+    
+            <dd>
+                @Html.DisplayFor(model => model.AspNetUser.Email)
+            </dd>
+    
+            <dt>
+                @Html.DisplayNameFor(model => model.Class.Id)
+            </dt>
+    
+            <dd>
+                @Html.DisplayFor(model => model.Class.Id)
+            </dd>
+    
+        </dl>
+    
+        @using (Html.BeginForm()) {
+            @Html.AntiForgeryToken()
+    
+            <div class="form-actions no-color">
+                <input type="submit" value="Delete" class="btn btn-default" /> |
+                @Html.ActionLink("Back to List", "Index")
+            </div>
+        }
     </div>
-
 </body>
 </html>
