--- a/project-8/project-8/Views/Student_Class/Details.cshtml
+++ b/project-8/project-8/Views/Student_Class/Details.cshtml
@@ -1,7 +1,7 @@
 ﻿@model project_8.Models.Student_Class
 
 @{
-    Layout = "~/Views/Shared/_LayoutStudent.cshtml";
+    Layout = null;
 }
 
 <!DOCTYPE html>
@@ -12,36 +12,31 @@
     <title>Details</title>
 </head>
 <body>
-    <div class="container">
-
-        <div>
-            <h4>Student_Class</h4>
-            <hr />
-            <dl class="dl-horizontal">
-                <dt>
-                    @Html.DisplayNameFor(model => model.AspNetUser.Email)
-                </dt>
-
-                <dd>
-                    @Html.DisplayFor(model => model.AspNetUser.Email)
-                </dd>
-
-                <dt>
-                    @Html.DisplayNameFor(model => model.Class.Id)
-                </dt>
-
-                <dd>
-                    @Html.DisplayFor(model => model.Class.Id)
-                </dd>
-
-            </dl>
-        </div>
-        <p>
-            @Html.ActionLink("Edit", "Edit", new { id = Model.Id }) |
-            @Html.ActionLink("Back to List", "Index")
-        </p>
-
+    <div>
+        <h4>Student_Class</h4>
+        <hr />
+        <dl class="dl-horizontal">
+            <dt>
+                @Html.DisplayNameFor(model => model.AspNetUser.Email)
+            </dt>
+    
+            <dd>
+                @Html.DisplayFor(model => model.AspNetUser.Email)
+            </dd>
+    
+            <dt>
+                @Html.DisplayNameFor(model => model.Class.Id)
+            </dt>
+    
+            <dd>
+                @Html.DisplayFor(model => model.Class.Id)
+            </dd>
+    
+        </dl>
     </div>
-
+    <p>
+        @Html.ActionLink("Edit", "Edit", new { id = Model.Id }) |
+        @Html.ActionLink("Back to List", "Index")
+    </p>
 </body>
 </html>
