--- a/project-8/project-8/Views/Student_Class/Index.cshtml
+++ b/project-8/project-8/Views/Student_Class/Index.cshtml
@@ -1,8 +1,9 @@
 ﻿@model IEnumerable<project_8.Models.Student_Class>
 
 @{
-    Layout = "~/Views/Shared/_LayoutStudent.cshtml";
+    Layout = null;
 }
+
 <!DOCTYPE html>
 
 <html>
@@ -11,40 +12,36 @@
     <title>Index</title>
 </head>
 <body>
-    <div class="container">
-        <p>
-            @Html.ActionLink("Create New", "Create")
-        </p>
-        <table class="table table-hover table-responsive-sm">
-            <tr>
-                <th>
-                    @Html.DisplayNameFor(model => model.AspNetUser.Email)
-                </th>
-                <th>
-                    @Html.DisplayNameFor(model => model.Class.Id)
-                </th>
-                <th></th>
-            </tr>
-
-            @foreach (var item in Model)
-            {
-                <tr>
-                    <td>
-                        @Html.DisplayFor(modelItem => item.AspNetUser.Email)
-                    </td>
-                    <td>
-                        @Html.DisplayFor(modelItem => item.Class.Id)
-                    </td>
-                    <td>
-                        @Html.ActionLink("Edit", "Edit", new { id = item.Id }) |
-                        @Html.ActionLink("Details", "Details", new { id = item.Id }) |
-                        @Html.ActionLink("Delete", "Delete", new { id = item.Id })
-                    </td>
-                </tr>
-            }
-
-        </table>
-
-    </div>
+    <p>
+        @Html.ActionLink("Create New", "Create")
+    </p>
+    <table class="table">
+        <tr>
+            <th>
+                @Html.DisplayNameFor(model => model.AspNetUser.Email)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.Class.Id)
+            </th>
+            <th></th>
+        </tr>
+    
+    @foreach (var item in Model) {
+        <tr>
+            <td>
+                @Html.DisplayFor(modelItem => item.AspNetUser.Email)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.Class.Id)
+            </td>
+            <td>
+                @Html.ActionLink("Edit", "Edit", new { id=item.Id }) |
+                @Html.ActionLink("Details", "Details", new { id=item.Id }) |
+                @Html.ActionLink("Delete", "Delete", new { id=item.Id })
+            </td>
+        </tr>
+    }
+    
+    </table>
 </body>
 </html>
