--- a/project-8/project-8/Views/Faculities/Create.cshtml
+++ b/project-8/project-8/Views/Faculities/Create.cshtml
@@ -42,7 +42,7 @@
             </div>
 
             <div class="form-group">
-                <label class="control-label col-md-2" style="text-align: left;width: 110px;" for="img">img</label>
+                <label class="control-label col-md-2 "  style="text-align: left;width: 110px;" for="img">img</label>
                 <div class="col-md-10">
                     <input class=" text-box single-line" id="img" name="img" type="file" value="">
                     <span class="field-validation-valid text-danger" data-valmsg-for="img" data-valmsg-replace="true"></span>
@@ -94,7 +94,7 @@
                     <span>@item.description</span>
                 </td>
                 <td>
-                    <img src="../images/@item.img" alt="" style="width:100px;height:100px" />
+                    <img src="../images/@item.img" alt="" style="width:100px;height:100px" class="thumbnail" />
                     @*<span>@item.img</span>*@
                 </td>
                 <td>
