--- a/project-8/project-8/Views/Home/Index.cshtml
+++ b/project-8/project-8/Views/Home/Index.cshtml
@@ -158,6 +158,8 @@
         </div>
     </div>
 </section>
+
+
 <section class="ftco-counter bg-light" id="section-counter">
     <div class="container">
         <div class="row justify-content-center">
@@ -166,7 +168,7 @@
                     <div class="col-md-3 d-flex justify-content-center counter-wrap ftco-animate">
                         <div class="block-18 text-center">
                             <div class="text">
-                                <strong class="number" data-number="10300">0</strong>
+                                <strong class="number" data-number="@Html.Action("SatisfiedStudents")">0</strong>
                                 <span>Satisfied Students</span>
                             </div>
                         </div>
@@ -174,27 +176,27 @@
                     <div class="col-md-3 d-flex justify-content-center counter-wrap ftco-animate">
                         <div class="block-18 text-center">
                             <div class="text">
-                                <strong class="number" data-number="7896">0</strong>
-                                <span>Courses Completed</span>
+                                <strong class="number" data-number="@Html.Action("Majors")">0</strong>
+                                <span>Majors</span>
                             </div>
                         </div>
                     </div>
                     <div class="col-md-3 d-flex justify-content-center counter-wrap ftco-animate">
                         <div class="block-18 text-center">
                             <div class="text">
-                                <strong class="number" data-number="400">0</strong>
-                                <span>Experts Advisors</span>
+                                <strong class="number" data-number="@Html.Action("Course")">0</strong>
+                                <span>Courses</span>
                             </div>
                         </div>
                     </div>
                     <div class="col-md-3 d-flex justify-content-center counter-wrap ftco-animate">
-                        <div class="block-18 text-center">
-                            <div class="text">
-                                <strong class="number" data-number="200">0</strong>
-                                <span>Schools</span>
+                            <div class="block-18 text-center">
+                                <div class="text">
+                                    <strong class="number" data-number="@Html.Action("Faculty")">0</strong>
+                                    <span>Faculty</span>
+                                </div>
                             </div>
                         </div>
-                    </div>
                 </div>
             </div>
         </div>
