--- a/project-8/project-8/Views/Student_Class/Errorr.cshtml
+++ b/project-8/project-8/Views/Student_Class/Errorr.cshtml
@@ -1,10 +1,8 @@
-﻿
+﻿@model System.Web.Mvc.HandleErrorInfo
+
 @{
     Layout = "~/Views/Shared/_LayoutStudent.cshtml";
 }
-
-
-
 
 
 
@@ -69,7 +67,7 @@
                         <div class="container shadow px-4 py-4 bg-white">
 
 
-                            <h2 style="text-align:center">Please check out with Accountant</h2>
+                            <h2 style="text-align:center;">You have added a schedule, To edit please go to Add and Drop</h2>
 
 
 
@@ -80,4 +78,3 @@
         </div>
     </div>
 </div>
-
