--- a/project-8/project-8/Content/StyleSheetadmin.css
+++ b/project-8/project-8/Content/StyleSheetadmin.css
@@ -40,6 +40,24 @@ body, html {
     width: 100%;
 }
 
+
+.thumbnail {
+    top: -50px;
+    left: -35px;
+    display: block;
+    z-index: 999;
+    cursor: pointer;
+    -webkit-transition-property: all;
+    -webkit-transition-duration: 0.3s;
+    -webkit-transition-timing-function: ease;
+}
+
+
+
+.thumbnail:hover {
+    transform: scale(5);
+}
+
 body {
     overflow: hidden;
     font-family: "Poppins", sans-serif;
