--- a/project-8/project-8/Views/AllowEnrollment/Index.cshtml
+++ b/project-8/project-8/Views/AllowEnrollment/Index.cshtml
@@ -6,6 +6,15 @@
 }
 
 <h2>Semester Joining Fees</h2>
+<hr />
+<div class="ser" style="width:100%;overflow:auto">
+    @using (Html.BeginForm("Index", "AllowEnrollment", FormMethod.Get))
+
+    {
+        @Html.TextBox("search")
+        <input type="Submit" value="search" class="btn btn-light" />
+    }
+</div>
 
 
 <table class="table">
@@ -35,10 +44,43 @@
                 @*@Html.LabelFor(m => m.charge)*@
             </td>
             <td>
-                @Html.ActionLink("Paid", "Paid", new { id = item.Id, userName = item.UserName }, null)
+                @*@Html.ActionLink("Pay", "Paid", new { id = item.Id, userName = item.UserName }, new { @class = "btn btn-success" })*@
+                <div>
+                    <button type="button" class="btn btn-info btn-lg" data-toggle="modal" data-target="#myModal">Pay</button>
+                    <div class="modal fade" id="myModal" role="dialog">
+                        <div class="modal-dialog">
+
+                            @*Modal content*@
+                            <div class="modal-content">
+                                <div class="modal-header">
+                                    <button type="button" class="close" data-dismiss="modal">&times;</button>
+                                    <h4 class="modal-title"></h4>
+                                </div>
+                                <div class="modal-body">
+                                    <h3>
+                                        Are You Sure ?
+                                    </h3>
+                                </div>
+                                <div class="modal-footer">
+                                    @Html.ActionLink("Save", "Paid", new { id = item.Id, userName = item.UserName }, new { @class = "btn btn-success" })
+
+                                    <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+                                </div>
+                            </div>
+
+                        </div>
+                    </div>
+
+                </div>
 
             </td>
         </tr>
     }
 
 </table>
+
+
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.3/jquery.min.js"></script>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
+
