--- a/project-8/project-8/Views/Classes/Create.cshtml
+++ b/project-8/project-8/Views/Classes/Create.cshtml
@@ -25,7 +25,8 @@
             <hr />
             @Html.ValidationSummary(true, "", new { @class = "text-danger" })
             <div class="form-group">
-                @Html.LabelFor(model => model.Courses_id, "Courses_id", htmlAttributes: new { @class = "control-label col-md-2", style = "text-align: left;width: 150px;" })
+                <label class="control-label col-md-2" style="text-align:left;width:150px;" for="Courses_id">Courses Name</label>
+
                 <div class="col-md-10">
                     @Html.DropDownList("Courses_id", null, htmlAttributes: new { @class = "form-control" })
                     @Html.ValidationMessageFor(model => model.Courses_id, "", new { @class = "text-danger" })
@@ -57,6 +58,7 @@
         </div>
     }
 
+    <hr />
 
     <div class="ser" style="width:100%;overflow:auto">
         @using (Html.BeginForm("Create", "Classes", FormMethod.Get))
