--- a/project-8/project-8/Views/Cours/Create.cshtml
+++ b/project-8/project-8/Views/Cours/Create.cshtml
@@ -33,7 +33,8 @@
             </div>
 
             <div class="form-group">
-                @Html.LabelFor(model => model.Major_id, "Major_id", htmlAttributes: new { @class = "control-label col-md-2", style = "text-align: left;width: 150px;" })
+                <label class="control-label col-md-2" style="text-align:left;width:150px;" for="Major_id">Major</label>
+
                 <div class="col-md-10">
                     @Html.DropDownList("Major_id", null, htmlAttributes: new { @class = "form-control" })
                     @Html.ValidationMessageFor(model => model.Major_id, "", new { @class = "text-danger" })
