--- a/project-8/project-8/Views/Majors/Create.cshtml
+++ b/project-8/project-8/Views/Majors/Create.cshtml
@@ -34,7 +34,7 @@
         </div>
 
         <div class="form-group">
-            @Html.LabelFor(model => model.Faculity_id, "Faculity_id", htmlAttributes: new { @class = "control-label col-md-2", style = "text-align: left;width: 110px;" })
+            <label class="control-label col-md-2" style="text-align:left;width:110px;" for="Faculity_id">Faculity</label>
             <div class="col-md-10">
                 @Html.DropDownList("Faculity_id", null, htmlAttributes: new { @class = "form-control" })
                 @Html.ValidationMessageFor(model => model.Faculity_id, "", new { @class = "text-danger" })
@@ -119,7 +119,7 @@
                 <span>@item.Name</span>
             </td>
             <td>
-                <img src="../images/@item.img" alt="" style="width:100px;height:100px" />
+                <img src="../images/@item.img" alt="" style="width:100px;height:100px" class="thumbnail" />
 
             </td>
             <td>
