--- a/project-8/project-8/Views/Shared/_LayoutStudent.cshtml
+++ b/project-8/project-8/Views/Shared/_LayoutStudent.cshtml
@@ -54,7 +54,7 @@
 
     <nav class="navbar navbar-expand-lg navbar-dark ftco_navbar bg-dark ftco-navbar-light" id="ftco-navbar">
         <div class="container">
-            <a class="navbar-brand" href="/Home/Index"> Genius <br><small>University</small></a>
+            <a class="navbar-brand" href="/Home/Index"><i class="flaticon-university"></i>Genius <br><small>University</small></a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#ftco-nav" aria-controls="ftco-nav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="oi oi-menu"></span> Menu
             </button>
