--- a/project-8/project-8/Views/Student_Class/Error3.cshtml
+++ b/project-8/project-8/Views/Student_Class/Error3.cshtml
@@ -6,10 +6,6 @@
 
 
 
-
-
-
-
 <style>
     body {
         padding: 0;
@@ -69,7 +65,7 @@
                         <div class="container shadow px-4 py-4 bg-white">
 
 
-                            <h2 style="text-align:center">Please check out with Accountant</h2>
+                            <h2 style="text-align:center">You must confirm a schedule before Adding and Droping</h2>
 
 
 
@@ -80,4 +76,3 @@
         </div>
     </div>
 </div>
-
